jump fix

--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,7 @@ a:hover{
     color: white;
 }
 
-#sub:hover{
+#specificity:hover{
     text-decoration: none;
     color: #aab7b8;
 }
